[package]
name = "hidden_ones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
rand = "0.8.5"
regex = "1.9.1"
[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1